force-app/main/default/objects/Mat_Servicio_de_talento__c/Mat_Servicio_de_talento__c.object-meta.xml
<CustomObject>
    <label>Servicio de talento</label>
    <nameField>
        <label>Talent Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios de talento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>