force-app/main/default/objects/Mat_Servicio_de_talento__c/fields/Mat_Activo__c.field-meta.xml
<CustomField>
    <fullName>Mat_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>