force-app/main/default/objects/Mat_Servicio_de_talento__c/fields/Mat_Talento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Talento__c</fullName>
    <label>Talento</label>
    <referenceTo>Mat_Talentos__c</referenceTo>
    <relationshipName>Talent_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>