force-app/main/default/objects/Mat_Servicio_de_talento__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Books_de_Talentos</relationshipName>
    <type>Lookup</type>
</CustomField>